php/style.css
*,
*:before, 
*:after {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}
body {
    background-color: #1c2130;
    font-family: "Poppins", sans-serif;
    background: #2c3e50;
}
.content {
    height: 100%;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
}

.background {
    position: fixed;
    width: 100%;
    height: 100%;
    padding: 10%;
    margin: auto;
    z-index: -5;
}
.background .shape {
    height: 200px;
    width: 200px;
    border-radius: 50%;
}
.shape:first-child {
    background-color: #ff9a8b;
    background-image: linear-gradient(90deg, #ff9a8b 0%, #ff6a88 55%, #ff99ac 100%);
    left: 40px; /*  MODIFIER CES VALEURS POUR BOUGER LE ROND SUR LA PAGE */
    top: 300px; /*                   <-------------                      */ 
    position: fixed;
}
/*.shape:second-child {
    background-color: #ff9a8b;
    background-image: linear-gradient(90deg, #ff9a8b 0%, #ff6a88 55%, #ff99ac 100%);
    left: 80px;
    top: 100px;
}*/

/* MENU BARRE =========================================================================================================================*/
header {
    height: 100px;
    display: flex;
    position: sticky;
    justify-content: space-between;
    left: 0;
    top: 0;
    width: 100%;
    height: 100px;
    background-color: #34495e;
    color: white;
    text-align: center; 
    z-index: 100;
}
nav {
    z-index: 200;
    display: flex;
	margin: 0px auto 0;
	position: sticky;
	width: 100%;
	height: 100px;
	background-color: #34495e;
	border-radius: 8px;
	font-size: 0;
    justify-content: space-between;
}
nav a {
    width: 20%;
	line-height: 90px;
	height: 100%;
	font-size: 13px;
	display: inline-block;
	position: relative;
	z-index: 1;
	text-decoration: none;
	text-transform: uppercase;
	text-align: center;
	color: white;
	cursor: pointer;
}
nav img {
    height: 100%;
    width: auto;
    border: 2px solid;
    border-radius: 20px;
}
nav .animation {
    position: absolute;
    left: 20%;
	height: 100px;
	top: 0;
	z-index: 0;
	transition: all .5s ease 0s;
	border-radius: 8px;
}
nav .start-image, a:nth-child(1):hover~.animation {
	width: 20%;
	left: 0%;
	background-color: #34495e;
}
nav .start-index, a:nth-child(2):hover~.animation {
	width: 20%;
	left: 20%;
	background-color: #fcba03;
}
nav .start-categories, a:nth-child(3):hover~.animation {
	width: 20%;
	left: 40%;
	background-color: #00ffdd;
}
nav .start-recherche, a:nth-child(4):hover~.animation {
	width: 20%;
	left: 60%;
	background-color: #a200ff;
}
nav .start-connexion, a:nth-child(5):hover~.animation {
	width: 20%;
	left: 80%;
	background-color: #b3ff00;
}



/* PARTIE PAGE ACCUEIL=================================================================================================================*/
/* img {
    height: auto;
    width: 100%;
    border: 2px solid;
    border-radius: 20px;
} */


main {
    height: auto;
    /* min-height: 100%; */
    width: 100%;
    padding: 30px 50px;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
    gap: 50px;
}

.main-card {
    height: 100%;
    width: 100%;
    display:flex;
    flex-direction: column;
    gap: 1rem;
    background-color: rgba(255, 255, 255, 0.13);
    border-radius: 10px;
    backdrop-filter: blur(10px);
    border: 2px solid rgba(255, 255, 255, 0.1);
    box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
    padding: 10px 35px; /* espacement dans la div */
    color: #ffffff;
}

.main-card-content{
    display: flex;
    justify-content: space-around;
    align-items: center;
    row-gap: 2rem;
    flex-wrap: wrap;
}
.categorie{
    width: 17%;
    height: auto;
    text-align: center;
}
.produit{
    display: flex;
    flex-direction: column;
    padding: 10px;
    width: 500px;
    background-color: #333;
    border: 2px solid black;
    border-radius: 5px;
}
/* .produit div{
    margin: 5px;
    width: auto;
    height: auto;
} */

/* FOOTER */

footer {
    display: flex;
    justify-content: space-around;
    position: relative;
    left: 0;
    bottom: 0;
    width: 100%;
    background-color: rgba(28, 33, 48, .5);
    color: white;
    text-align: center;
}
footer div{
    width: auto;
    height: auto;
    padding: 5px;
    text-align: center;
}
footer div a{
    text-decoration: none;
    color: white
}
footer div a:hover{
    text-decoration: underline;
    color: white
}


/* PARTIE CONNEXION UTILISATEUR =====================================================================================================*/
form {
    height: 560px;
    width: 420px;
    background-color: rgba(255, 255, 255, 0.13);
    border-radius: 10px;
    backdrop-filter: blur(10px);
    border: 2px solid rgba(255, 255, 255, 0.1);
    box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
    padding: 10px 35px;
}
form * {
    font-family: "Poppins", sans-serif;
    
    color: #ffffff;
    letter-spacing: 0.5px;
    outline: none;
    border: none;
}
form h3 {
    font-size: 35px;
    color: #fff;
    font-weight: 600;
    line-height: 42px;
    text-align: center;
}
label {
    display: block;
    margin-top: 30px;
    font-size: 19px;
    font-weight: 500;
}
input {
    display: block;
    height: 50px;
    width: 100%;
    background-color: rgba(255, 255, 255, 0.07);
    border-radius: 3px;
    padding: 0 10px;
    font-size: 18px;
    font-weight: 300;
}
::placeholder {
    color: #e5e5e5;
}
.checkbox-label {
    height: 1em;
    display: flex;
    gap: 10px;
    justify-content: flex-start;
    align-items: center;
    vertical-align: middle;
    word-wrap: break-word;
}
.checkbox-label input {
    width: auto;
}
#souvenir {
    height: 1em;
}
button {
    width: 100%;
    margin: 30px auto;
    color: rgb(255, 255, 255);
    background-color: #fa8bff;
    background-image: linear-gradient(45deg, #fa8bff 0%, #2bd2ff 52%, #2bff88 90%);
    padding: 8px 0;
    font-size: 24px;
    font-weight: 600;
    border-radius: 5px;
    cursor: pointer;
    transition: 0.2s ease-out;
    border: none;
}
button:hover {
    transform: scale(1.02);
}
.social div {
    width: 150px;
    border-radius: 3px;
    padding: 5px 10px 10px 5px;
    background-color: rgba(255, 255, 255, 0.27);
    color: #eaf0fb;
    text-align: center;
    font-size: 18px;
    font-weight: 500;
}
.social div:hover {
    background-color: rgba(255, 255, 255, 0.47);
    cursor: pointer;
    transition: 0.2s ease-out;
}
.alternate {
    margin: 15px auto;
}

